# agentchat

./: .gitignore  biome.jsonc
.codex/: config.toml
.devcontainer/: devcontainer.json
.serena/: project.yml
agent/: .bedrock_agentcore.yaml  pyproject.toml
agent/src/model/: load.py
cdk/: package-lock.json
doc/: API.md  INFRA.md  WEB.md
web/: biome.jsonc  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.mts
web/__tests__/: page.test.tsx  setup.tsx
web/app/daisy/: page.tsx
