
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "aws-opentelemetry-distro>=0.10.0",
    "bedrock-agentcore>=1.0.3",
    "boto3>=1.42.28",
    "botocore[crt]>=1.42.28",
    "mcp>=1.19.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.2.1",
    "strands-agents>=1.13.0",
    "strands-agents-tools>=0.2.16",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.2.6",
    "poethepoet>=0.40.0",
    "pyright>=1.1.408",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
]
